--- a/css/vars.css
+++ b/css/vars.css
@@ -11,6 +11,7 @@
   --col-selection: #8a13ff;
 
   --pad-panel: 16px 8px;
+  --anim-bounce: cubic-bezier(0, -0.6, 0.6, 1.5);
 
   --header-height: 3.75rem;
   --body-default-margin: 1rem;
@@ -18,5 +19,5 @@
   --interface-radius: 1rem;
   --tool-margin: 0.75rem;
   --tool-gap: 0.5rem;
-  --tool-duration: 100ms;
+  --tool-duration: 150ms;
 }
